DataSourcesTest needs opens, as reflection is done somewhere