@@ -383,7 +383,7 @@
               <environment>
                 <PATHLING_VERSION>${project.version}</PATHLING_VERSION>
                 <!-- The add-exports and add-opens flags are required for Java 17 -->
-                <JAVA_TOOL_OPTIONS>-Xmx2g -XX:MaxMetaspaceSize=400m -XX:ReservedCodeCacheSize=240m -Xss1m -Duser.timezone=UTC --add-exports=java.base/sun.nio.ch=ALL-UNNAMED --add-exports=java.base/java.net=ALL-UNNAMED</JAVA_TOOL_OPTIONS>
+                <JAVA_TOOL_OPTIONS>-Xmx2g -XX:MaxMetaspaceSize=400m -XX:ReservedCodeCacheSize=240m -Xss1m -Duser.timezone=UTC --add-exports=java.base/sun.nio.ch=ALL-UNNAMED --add-opens=java.base/java.net=ALL-UNNAMED</JAVA_TOOL_OPTIONS>
               </environment>
               <labels>
                 <copyright>Copyright © 2018-2023, Commonwealth Scientific and Industrial Research Organisation (CSIRO) ABN 41 687 119 230. Licensed under the CSIRO Open Source Software Licence Agreement.</copyright>
